Buildfile: Add warnings to compiler

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,9 +39,17 @@ file(GLOB_RECURSE LOX_SRC
 	"${PROJECT_SOURCE_DIR}/src/*.c"
 )
 
-if(WIN32)
-	if(MSVC)
-		ADD_DEFINITIONS(-DNOMINMAX -D_CRT_SECURE_NO_WARNINGS)
+if(MSVC)
+	ADD_DEFINITIONS(-DNOMINMAX -D_CRT_SECURE_NO_WARNINGS)
+	if(CMAKE_CXX_FLAGS MATCHES "/W[0-4]")
+		string(REGEX REPLACE "/W[0-4]" "/W4" CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
+	else()
+		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W4")
 	endif()
+elseif(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX)
+	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wno-long-long -pedantic")
 endif()
+
+message("-- Compiling with ${CMAKE_CXX_FLAGS}")
+
 add_executable(lox ${LOX_SRC})
