CI: use cmake to build

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,8 @@ script:
     - mkdir -p build
     - cd build
     - cmake ..
-    - make
+    - cmake --build . --config Release
+
 compiler:
     - clang
     - gcc
