VM: first op codes

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -23,7 +23,7 @@
 			"cwd": "${workspaceFolder}",
 			"environment": [],
             "externalConsole": true,
-            "preLaunchTask": "build"
+            "preLaunchTask": "Build"
 		}
 	]
 }
