--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,28 +1,29 @@
 {
-	// Use IntelliSense to learn about possible attributes.
-	// Hover to view descriptions of existing attributes.
-	// For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-	"version": "0.2.0",
-	"configurations": [
-		{
-			"name": "(Windows) Attach",
-			"type": "cppvsdbg",
-			"request": "attach",
-			"processId": "${command:pickProcess}"
-		},
-		{
-			"name": "(Windows) Debug",
-			"type": "cppvsdbg",
-			"request": "launch",
-			"program": "${workspaceFolder}\\bin\\Debug\\lox.exe",
-			"args": [
-                "--vm"
-			],
-			"stopAtEntry": false,
-			"cwd": "${workspaceFolder}",
-			"environment": [],
+    // Use IntelliSense to learn about possible attributes.
+    // Hover to view descriptions of existing attributes.
+    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+    "version": "0.2.0",
+    "configurations": [
+        {
+            "name": "(Windows) Attach",
+            "type": "cppvsdbg",
+            "request": "attach",
+            "processId": "${command:pickProcess}"
+        },
+        {
+            "name": "(Windows) Debug",
+            "type": "cppvsdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}\\bin\\Debug\\lox.exe",
+            "args": [
+                "--vm",
+                "${workspaceFolder}/examples/scopes.lox",
+            ],
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}",
+            "environment": [],
             "externalConsole": true,
             "preLaunchTask": "Build"
-		}
-	]
+        }
+    ]
 }
