vm: support control flow

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -17,7 +17,7 @@
             "program": "${workspaceFolder}\\bin\\Debug\\lox.exe",
             "args": [
                 "--vm",
-                "${workspaceFolder}/examples/scopes.lox",
+                "${workspaceFolder}/examples/control-flow.lox",
             ],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
